fix renamed routes

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,15 +5,9 @@
 </head>
 
 <body>
-  Ratings
-  <ul>
-  	{% for message in get_flashed_messages() %}
-  	<li>{{ message }}</li>
-  	{% endfor %}
-  </ul>
-  
-
-  <hr>
+{% for message in get_flashed_messages() %}
+<p>{{ message }}</p>
+{% endfor %}
 
   {% block content %} put your content here {% endblock %}
 
