--- a/templates/login-form.html
+++ b/templates/login-form.html
@@ -10,6 +10,6 @@
 	<input type="submit">
 </form>
 
-Not a member? <a href="/registration">Register here</a>.
+Not a member? <a href="/registration-form">Register here</a>.
 
 {% endblock %}
