--- a/templates/registration.html
+++ b/templates/registration.html
@@ -4,7 +4,7 @@
 
 <h1>Register</h1>
 
-<form action="/form-process" method="POST">
+<form action="/process-registration" method="POST">
 	Email: <input type="text" name="email">
 	Password: <input type="text" name="password"></input>
 	<input type="submit">
