--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,8 +3,15 @@
 {% block content %}
 
 <h1>Ratings</h1>
-<a href="/login">Log In</a>
-<a href="/registration">Register</a>
+
+{% if 'email' in session %}
+  <a href="/logout">Log Out</a>
+{% else %} 
+  <a href="/login-form">Log In</a>
+  <a href="/registration-form">Register</a>
+{% endif %}
+
+
 <h2>Movies</h2>
 <p><a href="/movies">View all movies</a></p>
 
